--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -3,106 +3,93 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewModel="clr-namespace:Playground.ViewModel"
         mc:Ignorable="d"
         KeyDown="MainWindowKeys"
-        Title="Sound Wizard" Height="700"  Width="1200" ResizeMode="NoResize" Icon="PlayerSkin\SoundWizard.ico">
+        Title="Sound Wizard" Height="700"  Width="600" ResizeMode="NoResize" Icon="PlayerSkin\SoundWizard.ico">
     <!--Refactor the Playlist to use this template or delete the comment!-->
     <Window.Resources>
-        <!--<VisualBrush x:Key="Media" Stretch="Uniform">
-            <VisualBrush.Visual>
-                <MediaElement Source="C:\Users\badbutcher\Desktop\Games\2017.07.26-14.35_01.mp4"/>
-            </VisualBrush.Visual>
-        </VisualBrush>-->
+        <DataTemplate DataType="{x:Type viewModel:SongViewModel}">
+            <Grid ShowGridLines="True" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="220"/>
+                    <ColumnDefinition Width="70" />
+                    <ColumnDefinition Width="60" />
+                    <ColumnDefinition Width="60" />
+                    <ColumnDefinition Width="65" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Name="Title"
+                           HorizontalAlignment="Left"
+                           Grid.Column="0" Grid.Row="0"
+                           Text="{Binding Path=Title}" 
+                           ToolTip="{Binding Path=Title}"/>
+                <TextBlock Name="Album"
+                           HorizontalAlignment="Center"
+                           Grid.Column="1" Grid.Row="0"
+                           Text="{Binding Path=Album}" 
+                           ToolTip="{Binding Path=Album}"/>
+                <TextBlock Name="Artist"
+                           HorizontalAlignment="Center"
+                           Grid.Column="2" Grid.Row="0"
+                           Text="{Binding Path=Artist}" 
+                           ToolTip="{Binding Path=Artist}"/>
+                <TextBlock Name="Genre"
+                           HorizontalAlignment="Center"
+                           Grid.Column="3" Grid.Row="0"
+                           Text="{Binding Path=Genre}"                     
+                           ToolTip="{Binding Path=Genre}" />
+                <TextBlock Name="Duration"
+                           Grid.Column="4" Grid.Row="0"
+                           HorizontalAlignment="Center"
+                           Text="{Binding Path=Duration}" />
+            </Grid>
+        </DataTemplate>
     </Window.Resources>
     <Grid>
-        <!--<Grid.RowDefinitions>
-            <RowDefinition Height="326*"/>
-            <RowDefinition Height="325*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Rectangle Fill="{StaticResource Media}" Grid.RowSpan="2"/>-->
-        
-        <Grid Margin="-24,-120,-20,0" Height="771" VerticalAlignment="Bottom" Grid.RowSpan="2">
+        <Grid Margin="-24,-100,-20,0" Height="771" VerticalAlignment="Bottom">
             <Grid.Background>
                 <ImageBrush ImageSource="/PlayerSkin/bg.jpg" Stretch="UniformToFill" />
             </Grid.Background>
-            <Button BorderThickness="0" Name="OpenButton" Height="70" Width="70" Background="Transparent" BorderBrush="Black" Command="{Binding OpenCommand}" Margin="63,146,485,382">
+            <Button BorderThickness="0" Name="OpenButton" Height="70" Width="70" Background="Transparent" BorderBrush="Black" Click="CommandProcessing" Margin="63,146,485,382">
                 <StackPanel>
                     <Image Source="/PlayerSkin/ButtonIcons/OpenSongsButtonIcon.png" />
                 </StackPanel>
             </Button>
-            <Button BorderThickness="0" Name="RewindButton" Width="70" Height="70"  Background="Transparent" BorderBrush="Black" Margin="168,146,380,382" Command="{Binding RewindCommand}">
+            <Button BorderThickness="0" Name="RewindButton" Width="70" Height="70"  Background="Transparent" BorderBrush="Black" Margin="168,146,380,382" Click="CommandProcessing">
                 <StackPanel>
                     <Image Source="/PlayerSkin/ButtonIcons/PreviousSongButtonIcon.png" />
                 </StackPanel>
             </Button>
-            <Button BorderThickness="0" Name="PlayButton" Width="70" Height="70"  Background="Transparent" Margin="269,146,279,382" Command="{Binding PlayCommand}">
+            <Button BorderThickness="0" Name="PlayButton" Width="70" Height="70"  Background="Transparent" Margin="269,146,279,382" Click="CommandProcessing">
                 <StackPanel>
                     <Image Source="/PlayerSkin/ButtonIcons/PlayButtonIcon.png" />
                 </StackPanel>
             </Button>
-            <Button BorderThickness="0" Name="ForwardButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Margin="377,146,171,382" Command="{Binding ForwardCommand}">
+            <Button BorderThickness="0" Name="ForwardButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Margin="377,146,171,382" Click="CommandProcessing">
                 <StackPanel>
                     <Image Source="/PlayerSkin/ButtonIcons/NextSongButtonIcon.png" />
                 </StackPanel>
             </Button>
-            <Button BorderThickness="0" Name="StopButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Margin="481,146,67,382" Command="{Binding StopCommand}">
+            <Button BorderThickness="0" Name="StopButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Margin="481,146,67,382" Click="CommandProcessing">
                 <StackPanel>
                     <Image Source="/PlayerSkin/ButtonIcons/StopButtonIcon.png" />
                 </StackPanel>
             </Button>
         </Grid>
-        <TextBox IsReadOnly="True" BorderThickness="5" FontFamily="Consolas" FontWeight="UltraBold" FontStyle="Italic" VerticalContentAlignment="Center" TextAlignment="Center" Background="Gold" FontSize="45" Margin="0,10,0,562">Sound Wizard</TextBox>
+        <TextBox IsReadOnly="True" BorderThickness="5" FontFamily="Consolas" FontWeight="UltraBold" FontStyle="Italic" VerticalContentAlignment="Center" TextAlignment="Center" Background="Gold" FontSize="45" Margin="0,10,0,589">Sound Wizard</TextBox>
 
         <ListBox Name="Playlist"
-                 ItemsSource="{Binding Playlist}"
+                 ItemsSource="{Binding}"
                  Opacity="0.8"
                  Background="DimGray"
                  BorderBrush="Transparent"
                  ScrollViewer.VerticalScrollBarVisibility="Visible"
-                 Margin="36,298,552,18"
+                 Margin="36,298,38,18"
                  AllowDrop="True"
-                     SelectionChanged="Playlist_SelectionChanged" Grid.RowSpan="2">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Grid ShowGridLines="True" >
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="220"/>
-                            <ColumnDefinition Width="70" />
-                            <ColumnDefinition Width="60" />
-                            <ColumnDefinition Width="60" />
-                            <ColumnDefinition Width="65" />
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Name="Title"
-                           HorizontalAlignment="Left"
-                           Grid.Column="0" Grid.Row="0"
-                           Text="{Binding Path=Title}" 
-                           ToolTip="{Binding Path=Title}"/>
-                        <TextBlock Name="Album"
-                           HorizontalAlignment="Center"
-                           Grid.Column="1" Grid.Row="0"
-                           Text="{Binding Path=Album}" 
-                           ToolTip="{Binding Path=Album}"/>
-                        <TextBlock Name="Artist"
-                           HorizontalAlignment="Center"
-                           Grid.Column="2" Grid.Row="0"
-                           Text="{Binding Path=Artist}" 
-                           ToolTip="{Binding Path=Artist}"/>
-                        <TextBlock Name="Genre"
-                           HorizontalAlignment="Center"
-                           Grid.Column="3" Grid.Row="0"
-                           Text="{Binding Path=Genre}"                     
-                           ToolTip="{Binding Path=Genre}" />
-                        <TextBlock Name="Duration"
-                           Grid.Column="4" Grid.Row="0"
-                           HorizontalAlignment="Center"
-                           Text="{Binding Path=DurationFormated}" />
-                    </Grid>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
+                 SelectionChanged="Playlist_SelectionChanged">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
                     <Setter Property="Background" Value="LightGray" />
@@ -111,18 +98,17 @@
                 </Style>
             </ListBox.ItemContainerStyle>
         </ListBox>
-        <Slider IsMoveToPointEnabled="True" Name="AudioSlider" Minimum="0" Maximum="1" ValueChanged="Volume_ValueChanged" Margin="20,206,210,441" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" />
-        <StackPanel Grid.RowSpan="2">
+
+        <Slider IsMoveToPointEnabled="True" Name="AudioSlider" Minimum="0" Maximum="1" ValueChanged="Volume_ValueChanged" Margin="20,206,210,440" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" />
+        <MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="MediaPlayer" VerticalAlignment="Top" Visibility="Hidden" />
+        <StackPanel>
             <ToggleButton x:Name = "tb" Content = "Toggle"
-         IsChecked="{Binding Path=Repeat}" Margin = "20"
+         Checked = "HandleCheck" Unchecked = "HandleCheck" Margin = "20"
          Width = "108" HorizontalAlignment = "Center" />
         </StackPanel>
-        <Border BorderThickness="2" BorderBrush="Black" Margin="767,230,63,419">
+        <Border BorderThickness="2" BorderBrush="Black" Margin="425,206,31,420">
             <Label Background="White" Name="songStatus" HorizontalContentAlignment="Center" />
         </Border>
-        <Slider IsMoveToPointEnabled="True" Name="seekBar" Margin="36,258,552,373" ValueChanged="ChangeValue"/>
-        <Button Click="Button_Click" Content="Click me!" Margin="1136,296,0,0" />
-        <Button BorderThickness="0" FontSize="30" Name="ExitButton" Width="70" Height="40" Background="Transparent" BorderBrush="Black" Command="{Binding ExitCommand}" HorizontalAlignment="Left" Margin="514,0,0,224" VerticalAlignment="Bottom">Exit</Button>
-        <MediaElement Height="337" Margin="647,296,63,0" LoadedBehavior="Manual" Name="MediaPlayer" VerticalAlignment="Top" Visibility="Visible" Grid.RowSpan="2" />
+        <Slider IsMoveToPointEnabled="True" Name="seekBar" Margin="36,256,36,378" ValueChanged="ChangeValue"/>
     </Grid>
 </Window>
