--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -1,8 +1,10 @@
-﻿<Window x:Class="Playground.MainWindow"
+﻿<Controls:MetroWindow  
+    x:Class="Playground.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
         KeyDown="MainWindowKeys"
         Title="Sound Wizard" Height="700"  Width="1200" Icon="PlayerSkin\SoundWizard.ico">
@@ -44,7 +46,7 @@
                  BorderBrush="Transparent"
                  ScrollViewer.VerticalScrollBarVisibility="Visible"
                  AllowDrop="True"
-                     SelectionChanged="Playlist_SelectionChanged" HorizontalAlignment="Right" Width="569" Grid.RowSpan="2" Height="385" Canvas.Top="276" Canvas.Left="10">
+                     SelectionChanged="Playlist_SelectionChanged" HorizontalAlignment="Right" Width="569" Height="385" Canvas.Top="276" Canvas.Left="10">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid ShowGridLines="True">
@@ -110,4 +112,4 @@
         </Grid>
     </Canvas>
     <!--</Grid>-->
-</Window>
+</Controls:MetroWindow>
